# Audio-Denoising

./: .gitattributes  .gitignore  Makefile  README.md  README_PIPELINE.md  ai-extras.txt  audio_restoration_strategy.md  codex-couture.ps1  diagnose.py  dirtree.txt  file_tree.txt  full-clean.txt  ing  install_deps.bat  package-lock.json  package.json  pyproject.toml  requirements-ai.txt  requirements-metrics.txt  requirements.tx  requirements.txt  run_core.sh  setup_env.bat  spillled_tea.txt  spleeter-lab.txt  test_phases.py
configs/: core_only.yaml  default.yaml  full_no_ai.yaml  full_pipeline.yaml  full_with_ai.yaml
logs/: phase1_analysis.json  phase1_noise_profile.json  phase2_wavelet.json  phase2b_spectral_subtract.json  phase2c_wiener.json  phase3_hpss.json  phase5_artifact_control.json  phase6_mastering.json  resolved_config.json  resolved_config_core.json
outputs/stages/: phase1_noise_profile.npz
pretrained_models/: decoder.ckpt  encoder.ckpt  hyperparams.yaml  masknet.ckpt
reports/: run_manifest.json
src/: README.md  ai_separate.py  analyze_audio.py  artifact_control.py  core_pipeline.py  hpss_separate.py  mastering_chain.py  metrics_eval.py  noise_profile.py  pipeline.py  pipeline_v2.py  spectral_subtract.py  wavelet_denoise.py  wiener_filter.py
