[project]
name = "audio-denoising"
version = "0.1.1"
description = "AI audio restoration project with optional extras"
license = { text = "MIT" }
authors = [{ name = "nobbydoo80", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<2",
  "scipy>=1.11,<1.14",
  "soundfile>=0.12",
  "librosa>=0.10.2.post1",
  "audioread>=3.0.1",
  "soxr>=0.5.0",
  "pooch>=1.8",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "numba>=0.59",
  "llvmlite>=0.42",
]

[project.optional-dependencies]
ai = [
  "torch>=2.2",
  "torchaudio>=2.2",
  "demucs>=4.0",
  "speechbrain>=1.0",
  "ffmpeg-python>=0.2.0",
]
metrics = [
  "pesq>=0.0.4",
  "pystoi>=0.3.3",
  "pyloudnorm>=0.1.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
